update to latest API